<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <ImageView
            android:id="@+id/ivlogoRcPass"
            android:layout_width="match_parent"
            android:layout_height="123dp"

            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tvNombreAPPRcPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/alexandria_semibold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvIntruccion2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/alexandria_light"
            android:text="@string/instruccionRecuperarContra"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_correoRcPass"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/correoRegistro"
            android:inputType="text|textWebEmailAddress"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_enviarEnlace"
            style="@style/ButtonRoundedOG"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/pridi_semibold"
            android:lineSpacingExtra="0sp"
            android:text="@string/btEnviarCorreo"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@null" />


            <TextView
                android:id="@+id/tvAcordarPass"
                android:layout_width="388dp"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/alexandria_light"
                android:text="@string/iniciaSesionRCPass"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp" />

        <TextView
            android:id="@+id/tvIniciaSesionPass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:fontFamily="@font/alexandria_semibold"
            android:text="@string/iniciaSesionRegistroIni"
            android:textAlignment="center"
            android:textColor="@color/cian"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvNoCuenta"
            app:layout_constraintTop_toBottomOf="@+id/bt_ingoogle"
            app:layout_constraintVertical_bias="0.285" />
    </LinearLayout>

</ScrollView>